Update booking feature
